0.32
 - Bug fixed: Issue #105. Some API calls where not correctly handling parameters specified in their URI.
   Notably, this fixes S3 ListObjectsV2. (dakkar)
 - New API: LexRuntime
 - New API: Organizations
 - New API: MTurk (Mechanical Turk)
 - New API: WorkDocs
 - New API: ResourceTagging
 - CodeCommit API update
 - ELBv2 API update
 - ECS API update 
 - EC2 API update
 - StorageGateway API update
 - DirectConnect API update
 - CognitoIdentity API update
 - Config API update
 - KMS API update
 - GameLift API update
 - ElasticBeanstalk API update
 - ES API update
 - DynamoDB API update
 - IAM API update
 - RDS API update
 - CloudDirectory API update
 - DeviceFarm API update 
 - EMR API update
 - ApiGateway API update
 - Pinpoint API update
 - Discovery API update
 - CloudTrail API update
 - Batch API update
 - CloudFront API update
 - CloudDirectory API update

0.31 01 Feb 2017 
 - Bug fixed: Services that use QueryCaller and EC2Caller were not serializing Booleans correctly
 - New API: CUR (AWS Cost and Usage Report Service) 
 - New API: CloudDirectory 
 - CodeDeploy API update: BlueGreen deployments
 - RDS API update: create Aurora read replica of an RDS
 - DynamoDB API update: Tagging for DynamoDB
 - ACM API update
 - EC2 API update

0.30 04 Jan 2017 
 - Specify minumum perl version (PR #137)
 - Update RestXmlCaller.pm to fix malformed xml schema issues (PR #133)
 - Don't trim values coming from APIs (Issue #130)
 - CodeDeploy API update: IamSessionArn, IamUserArn
 - ECS API update: Attributes and Placement constraints

0.29 27 Dec 2016
 - New functionality: Enabled and documented paginators (methods that repeatedly call methods that 
   return partial responses)
 - Remove under work warning from JSON-REST services: ApiGateway,CloudSearchDomain,CognitoSync,
   EFS, ES, ElasticTranscoder, Glacier, IoT, IoTData, Lambda
   This means that Bugs and error reports for these APIs will be handled with priority, as they
   would are considered to be functional