@@ -1,6 +1,5 @@
 package Paws::Credential::AssumeRoleWithSAML;
   use Moose;
-  use DateTime;
   use DateTime::Format::ISO8601;
   use Paws::Credential::None;
 
@@ -8,11 +7,9 @@ package Paws::Credential::AssumeRoleWithSAML;
 
   has expiration => (
     is => 'rw',
-    isa => 'DateTime',
+    isa => 'Int',
     lazy => 1,
-    default => sub {
-      DateTime->from_epoch(epoch => 0); # need a better way to do this
-    }
+    default => sub { 0 }
   );
 
   has actual_creds => (is => 'rw');
@@ -52,7 +49,7 @@ package Paws::Credential::AssumeRoleWithSAML;
   sub _refresh {
     my $self = shift;
 
-    return if (($self->expiration - DateTime->now())->is_positive);
+    return if $self->expiration >= time;
 
     my $result = $self->sts->AssumeRoleWithSAML(
       RoleArn => $self->RoleArn,
@@ -64,7 +61,7 @@ package Paws::Credential::AssumeRoleWithSAML;
 
     my $creds = $self->actual_creds($result->Credentials);
 
-    $self->expiration(DateTime::Format::ISO8601->parse_datetime($result->Credentials->Expiration));
+    $self->expiration(DateTime::Format::ISO8601->parse_datetime($result->Credentials->Expiration)->epoch);
   }
 
   no Moose;
